# uc_blog

./: .gitignore  Cargo.toml  article.sql  docker-compose.yml  flake.nix  result  rust-toolchain.toml  shell.nix
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link  flake-profile-7-link
.github/workflows/: audit.yml  general.yml
articles/: Cargo.toml  Dockerfile  article.sql
articles/articles/Hey,_It's_working!/: main.md
articles/articles/YUH/: main.md
articles/articles/creating/: main.md
articles/articles/title/: TITLE  main.md
articles/db/: articles.sqlite3  articles.sqlite3-shm  articles.sqlite3-wal
articles/migrations/: 20240222133803_articles.sql
articles/src/: main.rs
articles/src/handlers/: articles.rs  error.rs  errors.rs  handler.rs  mod.rs  model.rs  models.rs  response.rs  util.rs
articles/test.sh/: create.sh  delete.sh  read.sh  read_exact.sh  update.sh  update1.sh  update2.sh
backend/: .env  Cargo.toml  Dockerfile
backend/articles/: not_found.md
backend/articles/Writing_hello_world_in_rust!/: main.md
backend/db/: articles.sqlite3
backend/migrations/: 20240222133803_articles.sql
backend/src/: main.rs  models.rs
backend/src/handlers/: articles.rs  mod.rs
backend/test.sh/: create.sh  delete.sh  update.sh  update1.sh  update2.sh
db/: articles.sqlite3
frontend/: package-lock.json
frontend/design/: article.html  articles.html  index.html
frontend/design/css/: style.css
frontend/src/: app.html
frontend/src/lib/: about.svelte  articles.svelte  footer.svelte  header.svelte  index.ts  navbar.svelte
frontend/src/lib/about/: capabilities.svelte  index.ts  readme.svelte
frontend/src/lib/articles/: article_prev.svelte  breadcrumb.svelte  index.ts  search.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/articles/: +page.svelte
frontend/static/: app.css
proxy/: .env  Cargo.toml  Dockerfile
proxy/src/: main.rs
src/: main.rs
src/handlers/: mod.rs
utilities/hello_world_in_rust/: main.md
utilities/hello_world_in_rust_fixed/: main.md
