[package]
name = "uc_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["normalize-path"] }
