[package]
name = "uc_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["normalize-path", "cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
chrono = { version = "0.4.34", features = ["serde"] }
