[package]
name = "uc_blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart"] }
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["normalize-path", "cors", "full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "sqlite", "chrono"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
chrono = { version = "0.4.34", features = ["serde"] }
async-compression = { version = "0.4.6", features = ["tokio", "gzip"] }
tokio-tar = "0.3.1"
base64 = "0.22.0"
tokio-stream = "0.1.14"
pulldown-cmark = "0.10.0"
lazy_static = "1.4.0"
tar = "0.4.40"


[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]
